# adapters

./: Cargo.toml  README.md
src/: adapter.rs  backend.rs  fake_adapter.rs  lib.rs  manager.rs  transact.rs
tests/: test_manager.rs
